<resources>
    <string name="app_name">Mytest</string>
    <string name="full_name">Full Name*</string>
    <string name="profile_details">Profile Details</string>
    <string name="name">Name</string>
    <string name="btncontinue">Continue</string>
    <string name="txtfull_name">Full Name*</string>
    <string name="txtsarthak_urkude">Sarthak Urkude</string>
    <string name="txt_91_9999999999">+91 9999999999</string>
    <string name="txt_example_email_com">Example@email.com</string>
    <string name="email_address">Email Address*</string>
    <string name="mobile_number">Mobile Number*</string>
</resources>