<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/img_back_btn"
        android:layout_width="28dp"
        android:layout_height="26dp"
        android:layout_marginStart="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/txt_profile_details"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txt_profile_details"
        app:srcCompat="?attr/actionModeCloseDrawable" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txt_profile_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="40dp"
        android:text="@string/profile_details"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/img_back_btn"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/custom_logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_profile_details">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/constraint_dp_logo">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/groupimg"
                android:elevation="2dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5" />



        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <ImageButton
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/camera_icon"
        app:layout_constraintRight_toRightOf="@id/custom_logo"
        app:layout_constraintBottom_toBottomOf="@id/custom_logo"
        android:elevation="1dp"
        />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/form_constraint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/custom_logo"
        android:layout_marginTop="30dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txtfull_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:paddingTop="10dp"
            android:text="@string/txtfull_name"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/custom_logo"
            app:layout_goneMarginTop="60dp" />


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/materialCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            app:cardCornerRadius="10dp"
            app:layout_constraintTop_toBottomOf="@id/txtfull_name"
            app:strokeColor="#4CAF50"
            app:strokeWidth="2dp"
            tools:layout_editor_absoluteX="20dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraint_txtsarthak_urkude"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtsarthak_urkude"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/txtsarthak_urkude"
                    android:inputType="text"
                    android:padding="10dp"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txt_email_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:paddingTop="10dp"
            android:text="@string/email_address"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialCardView"
            tools:layout_editor_absoluteX="142dp" />


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/materialCardView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            app:cardCornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_email_address"
            app:strokeColor="#4CAF50"
            app:strokeWidth="2dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_edit_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/txt_example_email_com"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:textSize="18sp" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>


        <com.google.android.material.textview.MaterialTextView

            android:id="@+id/materialTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:paddingTop="10dp"
            android:text="@string/mobile_number"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialCardView2" />


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/materialCardView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            app:cardCornerRadius="10dp"
            app:layout_constraintTop_toBottomOf="@+id/materialTextView"
            app:strokeColor="#4CAF50"
            app:strokeWidth="2dp"
            tools:layout_editor_absoluteX="20dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/txt_91_9999999999"
                    android:inputType="number"
                    android:padding="10dp"
                    android:paddingStart="20dp"
                    android:textSize="18sp" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>
    </androidx.constraintlayout.widget.ConstraintLayout>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginHorizontal="16dp"
        android:backgroundTint="#4CAF50"
        android:text="@string/btncontinue"
        android:layout_marginBottom="20dp"
        android:textAllCaps="false"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>




    <!--</androidx.constraintlayout.widget.ConstraintLayout>-->
<!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
<!--    xmlns:tools="http://schemas.android.com/tools"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="match_parent"-->
<!--    tools:context=".MainActivity"-->
<!--    android:orientation="vertical">-->

<!--    <LinearLayout-->
<!--        android:id="@+id/linearLayout"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="0dp"-->
<!--        android:layout_weight="1"-->
<!--        android:orientation="horizontal"-->
<!--        app:layout_constraintVertical_weight="1">-->

<!--        <ImageView-->
<!--            android:id="@+id/imageView2"-->
<!--            android:layout_width="28dp"-->
<!--            android:layout_height="26dp"-->
<!--            android:layout_marginTop="40dp"-->
<!--            app:srcCompat="?attr/actionModeCloseDrawable"-->
<!--            tools:layout_editor_absoluteX="8dp"-->
<!--            tools:layout_editor_absoluteY="19dp" />-->
<!--        <TextView-->
<!--            android:id="@+id/textView"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginStart="72dp"-->
<!--            android:layout_marginTop="40dp"-->
<!--            android:text="@string/profile_details"-->
<!--            android:textSize="24sp"-->
<!--            android:textColor="@color/black"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="parent" />-->
<!--    </LinearLayout>-->



<!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="0dp"-->
<!--        android:layout_weight="2"-->
<!--        android:gravity="center_horizontal">-->
<!--        <com.google.android.material.card.MaterialCardView-->
<!--            android:layout_width="150dp"-->
<!--            android:layout_height="150dp"-->
<!--            android:layout_gravity="center_horizontal"-->
<!--            app:cardCornerRadius="100dp">-->

<!--            <androidx.constraintlayout.widget.ConstraintLayout-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="match_parent">-->

<!--                <ImageView-->
<!--                    android:id="@+id/imageView"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="match_parent"-->
<!--                    app:layout_constraintBottom_toBottomOf="parent"-->
<!--                    app:layout_constraintEnd_toEndOf="parent"-->
<!--                    app:layout_constraintHorizontal_bias="0.5"-->
<!--                    app:layout_constraintStart_toStartOf="parent"-->
<!--                    app:layout_constraintTop_toTopOf="parent"-->
<!--                    app:layout_constraintVertical_bias="0.5"-->
<!--                    android:src="@drawable/groupimg" />-->

<!--                <ImageView-->
<!--                    android:id="@+id/imageView3"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                   app:layout_constraintEnd_toStartOf="@id/imageView"-->
<!--                    app:layout_constraintBottom_toBottomOf="@id/imageView"-->
<!--                    app:srcCompat="@android:drawable/presence_audio_online" />-->
<!--            </androidx.constraintlayout.widget.ConstraintLayout>-->
<!--        </com.google.android.material.card.MaterialCardView>-->
<!--    </LinearLayout>-->


<!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="0dp"-->
<!--        android:layout_weight="4"-->
<!--        android:orientation="vertical"-->
<!--        android:layout_marginHorizontal="10dp"-->
<!--        android:paddingHorizontal="10dp">-->
<!--        <com.google.android.material.textview.MaterialTextView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/txtfull_name"-->
<!--            android:textSize="24sp"-->
<!--            android:layout_marginTop="10dp"/>-->
<!--        <com.google.android.material.card.MaterialCardView-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            app:cardCornerRadius="10dp"-->
<!--            app:strokeColor="#4CAF50"-->
<!--            app:strokeWidth="2dp"-->
<!--            >-->
<!--            <LinearLayout-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="match_parent">-->
<!--                <com.google.android.material.textfield.TextInputEditText-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:hint="@string/txtsarthak_urkude"-->
<!--                    android:padding="10dp"-->
<!--                    android:background="@null"-->
<!--                    android:textSize="18sp"-->
<!--                    android:inputType="text"-->
<!--                    />-->
<!--            </LinearLayout>-->
<!--        </com.google.android.material.card.MaterialCardView>-->

<!--        <com.google.android.material.textview.MaterialTextView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/email_address"-->
<!--            android:textSize="24sp"-->
<!--            android:layout_marginTop="10dp"/>-->
<!--        <com.google.android.material.card.MaterialCardView-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            app:cardCornerRadius="10dp"-->
<!--            app:strokeColor="#4CAF50"-->
<!--            app:strokeWidth="2dp">-->
<!--            <LinearLayout-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="match_parent">-->

<!--                <EditText-->
<!--                    android:inputType="textEmailAddress"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:hint="@string/txt_example_email_com"-->
<!--                    android:paddingStart="20dp"-->
<!--                    android:background="@null"-->
<!--                    android:textSize="24sp"-->
<!--                    android:layout_marginTop="10dp"/>-->
<!--            </LinearLayout>-->
<!--        </com.google.android.material.card.MaterialCardView>-->

<!--        <com.google.android.material.textview.MaterialTextView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/mobile_number"-->
<!--            android:textSize="24sp"/>-->
<!--        <com.google.android.material.card.MaterialCardView-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            app:cardCornerRadius="10dp"-->
<!--            app:strokeColor="#4CAF50"-->
<!--            app:strokeWidth="2dp">-->
<!--            <LinearLayout-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="match_parent">-->
<!--                <EditText-->
<!--                    android:inputType="number"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:hint="@string/txt_91_9999999999"-->
<!--                    android:background="@null"-->
<!--                    android:paddingLeft="20dp"-->
<!--                    android:textSize="24sp"-->
<!--                    android:layout_marginTop="10dp"/>-->
<!--            </LinearLayout>-->
<!--        </com.google.android.material.card.MaterialCardView>-->



<!--    </LinearLayout>-->

<!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_weight="1">-->
<!--        <Button-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:textStyle="bold"-->
<!--            android:text="@string/btncontinue"-->
<!--            android:textAllCaps="false"-->
<!--            android:layout_marginHorizontal="16dp"-->
<!--            android:layout_gravity="bottom"-->
<!--            android:layout_marginBottom="10dp"-->
<!--            android:backgroundTint="#4CAF50"/>-->
<!--    </LinearLayout>-->
    <!--</LinearLayout>-->